# loanadvisor-automation

./: .gitignore  Jenkinsfile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.py
config/: env.example
docs/: BUSINESS_FLOW.md  GITHUB_JENKINS_CHECKLIST.md  JENKINS_LOCAL_SETUP.md
scripts/: jenkins_preflight.ps1  setup_windows.bat  split_from_backup.py
src/loanadvisor/: __init__.py
src/loanadvisor/api/: session_loader.py
src/loanadvisor/core/: config.py  driver_factory.py  login_session.py
src/loanadvisor/flows/: apply_flow.py  dispatcher.py  kyc_aadhaar_flow.py  kyc_bank_flow.py  kyc_liveness_flow.py  kyc_router.py  login_flow.py  next_flow.py  repay_flow.py
src/loanadvisor/helpers/db/: verify.py
src/loanadvisor/helpers/kyc/: __init__.py  confirm_modal.py  shared.py
src/loanadvisor/helpers/native/: interactions.py  permissions.py
src/loanadvisor/helpers/webview/: clicks.py  h5.py  home_actions.py  settings.py  switcher.py
tests/: conftest.py  test_api_session.py  test_e2e_loanadvisor.py
