[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loanadvisor-automation"
version = "1.0.0"
description = "Loan Advisor Appium E2E + DB + API automation"
requires-python = ">=3.10"
dependencies = [
    "Appium-Python-Client>=4.1.0",
    "selenium>=4.15.0",
    "pymysql>=1.1.0",
    "pytest>=8.0.0",
    "allure-pytest>=2.13.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["src"]
pythonVersion = "3.10"
